[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/ui/icons/airship.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/bar/rect.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/icons/down.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/bar/circle.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/bar/circle_fill.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/button/exit_enter.gd" type="Script" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="exit_enter" type="Button"]
margin_right = 120.0
margin_bottom = 128.0
rect_min_size = Vector2( 120, 128 )
rect_pivot_offset = Vector2( 60, 64 )
custom_styles/focus = SubResource( 1 )
flat = true
script = ExtResource( 6 )

[node name="airship_potrait" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 120, 128 )
mouse_filter = 2

[node name="bg" type="NinePatchRect" parent="airship_potrait"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="NinePatchRect2" type="NinePatchRect" parent="airship_potrait"]
modulate = Color( 0.239216, 0.239216, 0.239216, 0.733333 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
texture = ExtResource( 5 )
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="icon" type="TextureRect" parent="airship_potrait"]
modulate = Color( 0, 0, 0, 0.552941 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -40.0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 80 )
mouse_filter = 2
texture = ExtResource( 1 )
expand = true

[node name="exit_icon" type="TextureRect" parent="airship_potrait"]
visible = false
modulate = Color( 1, 0.639216, 0.352941, 1 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 17.0
margin_top = -9.0
margin_right = 57.0
margin_bottom = 31.0
rect_min_size = Vector2( 40, 40 )
mouse_filter = 2
texture = ExtResource( 3 )
expand = true

[node name="enter_icon" type="TextureRect" parent="airship_potrait"]
visible = false
modulate = Color( 0.494118, 1, 0.352941, 1 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 17.0
margin_top = -9.0
margin_right = 57.0
margin_bottom = 31.0
rect_min_size = Vector2( 40, 40 )
mouse_filter = 2
texture = ExtResource( 3 )
expand = true
flip_v = true

[node name="border" type="NinePatchRect" parent="airship_potrait"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="TextureProgress" type="TextureProgress" parent="airship_potrait"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.0
margin_top = -57.0
margin_right = 53.0
margin_bottom = 57.0
mouse_filter = 2
max_value = 5.0
step = 0.1
value = 3.0
texture_progress = ExtResource( 2 )
fill_mode = 5
tint_progress = Color( 1, 1, 1, 0.431373 )
nine_patch_stretch = true
stretch_margin_left = 32
stretch_margin_top = 32
stretch_margin_right = 32
stretch_margin_bottom = 32

[node name="button_cooldown" type="Timer" parent="airship_potrait"]
wait_time = 5.0
one_shot = true

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="." to="." method="_on_exit_enter_pressed"]
[connection signal="timeout" from="airship_potrait/button_cooldown" to="." method="_on_button_cooldown_timeout"]
